fixed return types for List<?> objects